parseInt 빼고 정수 계산

--- a/input/webapp/view/Main.view.xml
+++ b/input/webapp/view/Main.view.xml
@@ -25,9 +25,19 @@
             <Panel headerText="JSON Model로 접근하여 값을 읽고 쓰기 해보기">
                 <f:SimpleForm layout="ResponsiveLayout">
                     <Label text="숫자1" />
-                    <Input value="{/value1}" type="Number" />
+                    <Input value="{
+                        path: '/value1',
+                        type: 'sap.ui.model.type.Integer'
+                    }" type="Number" 
+                       validationError="onValidError"/>
+
                     <Label text="숫자2" />
-                    <Input value="{/value2}" type="Number" />
+                    <Input value="{
+                        path: '/value2',
+                        type: 'sap.ui.model.type.Integer'
+                    }" type="Number"
+                       validationError="onValidError" />
+
                     <Label text="결과" />
                     <Input value="{/result}" editable="false" />
 
