입력값 최대 최소 정하기

--- a/input/webapp/view/Main.view.xml
+++ b/input/webapp/view/Main.view.xml
@@ -38,7 +38,11 @@
                     <Label text="숫자2" />
                     <Input value="{
                         path: '/value2',
-                        type: 'sap.ui.model.type.Integer'
+                        type: 'sap.ui.model.type.Integer',
+                        constraints: {
+                            minimum: 0,
+                            maximum: 100
+                        }
                     }" type="Number"/>
                     <!-- <Input value="{
                         path: '/value2',
