--- a/input/webapp/view/Main.view.xml
+++ b/input/webapp/view/Main.view.xml
@@ -35,7 +35,7 @@
                     }" type="Number" 
                        validationError="onValidError" /> -->
 
-                    <Label text="숫자2" />
+                    <Label text="숫자2(0~100)" />
                     <Input value="{
                         path: '/value2',
                         type: 'sap.ui.model.type.Integer',
