수정하기 로직 구현

--- a/odatamodel_multi_update/webapp/view/Main.view.xml
+++ b/odatamodel_multi_update/webapp/view/Main.view.xml
@@ -1,7 +1,58 @@
 <mvc:View controllerName="sync.e21.odatamodelmultiupdate.controller.Main"
     xmlns:mvc="sap.ui.core.mvc" displayBlock="true"
-    xmlns="sap.m">
+    xmlns="sap.m"
+    xmlns:t="sap.ui.table">
     <Page id="page" title="{i18n>title}">
-        <content />
+        <content>
+            <t:Table
+                id="idTable"
+                rows="{/CarrierSet}">
+
+                <t:extension>
+                    <!-- Toolbar -->
+                    <Toolbar>
+                        <ToolbarSpacer />
+                        <Button icon="sap-icon://refresh" press="onRefresh" />
+                        <Button icon="sap-icon://edit" 
+                            press="onEdit"
+                            visible="{= !${view>/EditMode} }" />
+                    </Toolbar>
+                </t:extension>
+
+                <t:columns>
+                    <!-- 컬럼 제목과 데이터 -->
+                    <t:Column width="7rem" hAlign="Center" >
+                        <Label design="Bold" text="{i18n>labelCarrid}" /> <!-- i18n.properties에서 labelCarrid=항공사ID -->
+                        <t:template>
+                            <ObjectIdentifier title="{Carrid}" />
+                        </t:template>
+                    </t:Column>
+
+                    <t:Column visible="{view>/EditMode}">
+                        <Label design="Bold" text="{i18n>labelCarrname}" />
+                        <t:template>
+                            <Input value="{Carrname}" 
+                                placeholder="항공사의 이름을 입력하세요." 
+                                valueLiveUpdate="true"/>
+                        </t:template>
+                    </t:Column>
+
+                    <t:Column visible="{= !${view>/EditMode} }">
+                        <Label design="Bold" text="{i18n>labelCarrname}" />
+                        <t:template>
+                            <Text text="{Carrname}" />
+                        </t:template>
+                    </t:Column>
+                </t:columns>
+
+            </t:Table>
+        </content>
+        <footer>
+            <OverflowToolbar>
+                <ToolbarSpacer />
+                <Button icon="sap-icon://save" press="onSave" type="Accept" />
+                <Button icon="sap-icon://cancel" press="onCancel" type="Reject" />
+            </OverflowToolbar>
+        </footer>
     </Page>
 </mvc:View>
