--- a/odatamodel_multi_update/webapp/view/Main.view.xml
+++ b/odatamodel_multi_update/webapp/view/Main.view.xml
@@ -28,27 +28,34 @@
                         </t:template>
                     </t:Column>
 
-                    <t:Column visible="{view>/EditMode}">
+                    <t:Column>
                         <Label design="Bold" text="{i18n>labelCarrname}" />
                         <t:template>
-                            <Input value="{Carrname}" 
-                                placeholder="항공사의 이름을 입력하세요." 
-                                valueLiveUpdate="true"/>
+                            <HBox>
+                                <Input value="{Carrname}" 
+                                    placeholder="항공사의 이름을 입력하세요." 
+                                    valueLiveUpdate="true"
+                                    maxLength="20"
+                                    visible="{view>/EditMode}" 
+                                    width="20rem" /> <!--항공사명은 최대 20자리-->
+                                <Text text="{Carrname}" 
+                                    visible="{= !${view>/EditMode} }"/>
+                            </HBox>
                         </t:template>
                     </t:Column>
 
-                    <t:Column visible="{= !${view>/EditMode} }">
+                    <!-- <t:Column visible="{= !${view>/EditMode} }">
                         <Label design="Bold" text="{i18n>labelCarrname}" />
                         <t:template>
                             <Text text="{Carrname}" />
                         </t:template>
-                    </t:Column>
+                    </t:Column> -->
                 </t:columns>
 
             </t:Table>
         </content>
         <footer>
-            <OverflowToolbar>
+            <OverflowToolbar visible="{view>/EditMode}">
                 <ToolbarSpacer />
                 <Button icon="sap-icon://save" press="onSave" type="Accept" />
                 <Button icon="sap-icon://cancel" press="onCancel" type="Reject" />
