--- a/odatamodel_multi_update/webapp/view/Main.view.xml
+++ b/odatamodel_multi_update/webapp/view/Main.view.xml
@@ -1,7 +1,8 @@
 <mvc:View controllerName="sync.e21.odatamodelmultiupdate.controller.Main"
     xmlns:mvc="sap.ui.core.mvc" displayBlock="true"
     xmlns="sap.m"
-    xmlns:t="sap.ui.table">
+    xmlns:t="sap.ui.table"
+    xmlns:core="sap.ui.core">
     <Page id="page" title="{i18n>title}">
         <content>
             <t:Table
@@ -50,6 +51,27 @@
                             <Text text="{Carrname}" />
                         </t:template>
                     </t:Column> -->
+                    <t:Column>
+                        <Label text="{i18n>labelCurrcode}" />
+                        <t:template>
+                            <HBox>
+                                <!-- 조회모드에서 보여줄 항목 -->
+                                <ObjectAttribute text="{Currcode}"
+                                    visible="{= !${view>/EditMode} }"/>
+                                <ComboBox selectedKey="{Currcode}"
+                                    items="{/CurrencySet}" 
+                                    visible="{view>/EditMode}" >
+                                    <items>
+                                        <core:Item key="{Waers}" text="{Waers}({Ktext})" />
+                                        <!-- <core:Item key="KRW" text="KRW(원화)" />
+                                        <core:Item key="USD" text="USD(달러)" />
+                                        <core:Item key="CAD" text="CAD(캐나다)" />
+                                        <core:Item key="AUD" text="AUD(호주)" /> -->
+                                    </items>
+                                </ComboBox>
+                            </HBox>
+                        </t:template>
+                    </t:Column>
                 </t:columns>
 
             </t:Table>
