테이블 selectionMode 설정

--- a/ex2review/webapp/view/Main.view.xml
+++ b/ex2review/webapp/view/Main.view.xml
@@ -4,7 +4,10 @@
     xmlns:t="sap.ui.table">
     <Page id="page" title="{i18n>title}">
         <content>
-            <t:Table rows="{/FlightSet}" >
+            <t:Table 
+                rows="{/FlightSet}"
+                selectionMode="Single"
+                selectionBehavior="Row" >
                 <t:columns>
                     <t:Column >
                         <Label text="{i18n>labelCarrid}"/>
