팝업창 띄우고 내용 채우기

--- a/ex2review/webapp/view/Main.view.xml
+++ b/ex2review/webapp/view/Main.view.xml
@@ -5,9 +5,15 @@
     <Page id="page" title="{i18n>title}">
         <content>
             <t:Table 
-                rows="{/FlightSet}"
+                rows="{
+                    path: '/FlightSet',
+                    parameters: {
+                        expand: 'toConnection'
+                    }
+                }"
                 selectionMode="Single"
-                selectionBehavior="Row" >
+                selectionBehavior="Row"
+                rowSelectionChange="onSelection" >
                 <t:columns>
                     <t:Column >
                         <Label text="{i18n>labelCarrid}"/>
