--- a/ex3review/webapp/view/Main.view.xml
+++ b/ex3review/webapp/view/Main.view.xml
@@ -1,7 +1,72 @@
 <mvc:View controllerName="sync.e21.ex3review.controller.Main"
     xmlns:mvc="sap.ui.core.mvc" displayBlock="true"
-    xmlns="sap.m">
+    xmlns="sap.m"
+    xmlns:t="sap.ui.table">
     <Page id="page" title="{i18n>title}">
-        <content />
+        <content>
+            <t:Table rows="{/ConnectionSet}">
+                <t:columns>
+                    <!-- 6개의 컬럼 -->
+                    <!-- 항공사ID -->
+                    <t:Column >
+                        <Label text="{i18n>labelCarrid}" />
+                        <t:template>
+                            <ObjectIdentifier title="{Carrid}" />
+                        </t:template>
+                    </t:Column>
+                    <!-- 항공편NO -->
+                    <t:Column >
+                        <Label text="{i18n>labelConnid}" />
+                        <t:template>
+                            <ObjectIdentifier title="{Connid}" />
+                        </t:template>
+                    </t:Column>
+                    <!-- 출발도시 -->
+                    <t:Column>
+                        <Label text="{i18n>labelCityfrom}" />
+                        <t:template>
+                            <Text text="{Cityfrom}({Countryfr})" />
+                        </t:template>
+                    </t:Column>
+                    <!-- 도착도시 -->
+                    <t:Column>
+                        <Label text="{i18n>labelCityto}" />
+                        <t:template>
+                            <Text text="{Cityto}({Countryto})" />
+                        </t:template>
+                    </t:Column>
+                    <!-- 비행시간 -->
+                    <t:Column>
+                        <Label text="{i18n>labelArrtime}" />
+                        <t:template>
+                            <Text text="{ 
+                                path: 'Deptime', 
+                                type: 'sap.ui.model.odata.type.Time',
+                                formatOptions: {
+                                    pattern: 'a HH:mm:ss'
+                                }
+                            } ~ {Arrtime}" />
+                        </t:template>
+                    </t:Column>
+                    <!-- 비행거리 -->
+                    <t:Column>
+                        <Label text="{i18n>labelDistance}" />
+                        <t:template>
+                            <ObjectNumber number="{Distance}" unit="{Distid}" />
+                        </t:template>
+                    </t:Column>
+                </t:columns>
+            </t:Table>
+        </content>
+        <footer>
+            <OverflowToolbar >
+                <ToolbarSpacer />
+                <Button 
+                    icon="sap-icon://create" 
+                    text="신규생성"
+                    type="Accept"
+                    press="onCreate" />
+            </OverflowToolbar>
+        </footer>
     </Page>
 </mvc:View>
