--- a/ex3review/webapp/view/Main.view.xml
+++ b/ex3review/webapp/view/Main.view.xml
@@ -4,7 +4,9 @@
     xmlns:t="sap.ui.table">
     <Page id="page" title="{i18n>title}">
         <content>
-            <t:Table rows="{/ConnectionSet}">
+            <t:Table
+                id="idTable" 
+                rows="{/ConnectionSet}">
                 <t:columns>
                     <!-- 6개의 컬럼 -->
                     <!-- 항공사ID -->
@@ -66,6 +68,11 @@
                     text="신규생성"
                     type="Accept"
                     press="onCreate" />
+                <Button 
+                    icon="sap-icon://delete"
+                    text="삭제"
+                    type="Reject"
+                    press="onDelete" />
             </OverflowToolbar>
         </footer>
     </Page>
