--- a/fcl/webapp/view/App.view.xml
+++ b/fcl/webapp/view/App.view.xml
@@ -1,7 +1,23 @@
 <mvc:View controllerName="sync.eb.fcl.controller.App"
     xmlns:html="http://www.w3.org/1999/xhtml"
     xmlns:mvc="sap.ui.core.mvc" displayBlock="true"
-    xmlns="sap.m">
-    <App id="app">
-    </App>
+    xmlns="sap.m"
+    xmlns:f="sap.f"
+    height="100%">
+    
+    <!-- <App id="app"> -->
+        <f:FlexibleColumnLayout 
+            id="idFlexibleColumnLayout"
+            backgroundDesign="Solid"
+        >
+            <f:beginColumnPages>
+                <mvc:XMLView id="beginView" viewName="sync.eb.fcl.view.Master"/>
+            </f:beginColumnPages>
+
+            <f:midColumnPages>
+                <mvc:XMLView id="detailView" viewName="sync.eb.fcl.view.Detail"/>
+            </f:midColumnPages>
+
+        </f:FlexibleColumnLayout>
+    <!-- </App> -->
 </mvc:View>
