--- a/project1/webapp/view/View1.view.xml
+++ b/project1/webapp/view/View1.view.xml
@@ -5,49 +5,60 @@
     xmlns:viz.feeds="sap.viz.ui5.controls.common.feeds" 
     xmlns:viz.data="sap.viz.ui5.data"
     xmlns:chart="sap.suite.ui.commons"
+    xmlns:layout="sap.ui.layout"
     >
-        <Page title="손익계산서">
-            <content>
-                <VBox>
-                    <chart:ChartContainer id="chartContainer" showFullScreen="true">
-                        <chart:ChartContainerContent >
+    <Page title="손익계산서">
+        <content>
+            <layout:FixFlex 
+                id="idFixFlex" 
+                minFlexSize="250">
+                <layout:fixContent>
+                        <chart:ChartContainer id="chartContainer" showFullScreen="true">
                             <chart:content>
-                                <viz:VizFrame 
-                                    id="oVizFrame" 
-                                    busy="false" 
-                                    busyIndicatorDelay="1000" 
-                                    visible="true" 
-                                    uiConfig="{ 'applicationSet': 'fiori' }" 
-                                    vizType="donut" 
-                                    legendVisible="true" 
-                                    vizProperties="{ 
-                                        'plotArea': {
-                                            drawingEffect: 'glossy'
-                                        },
-                                        'title': { 
-                                            'visible': 'true', 
-                                            'text': '2024년 1월 1일부터 2024년 12월 31일까지' 
-                                        }}"
-                                    >
-                                    <viz:dataset>
-                                        <viz.data:FlattenedDataset data="{/book}">
-                                            <viz.data:dimensions>
-                                                <viz.data:DimensionDefinition name="Item Category" value="{Item Category}" />
-                                            </viz.data:dimensions>
-                                            <viz.data:measures>
-                                                <viz.data:MeasureDefinition group="1" name="Revenue" value="{Revenue}" />
-                                            </viz.data:measures>
-                                        </viz.data:FlattenedDataset>
-                                    </viz:dataset>
-                                    <viz:feeds>
-                                        <viz.feeds:FeedItem id="value1" uid="size" type="Measure" values="Revenue" />
-                                        <viz.feeds:FeedItem uid="color" type="Dimension" values="Item Category" />
-                                    </viz:feeds>
-                                </viz:VizFrame>
+                                <chart:ChartContainerContent >
+                                    <chart:content>
+                                        <viz:Popover id="idPopOver" />
+                                        <viz:VizFrame 
+                                            id="oVizFrame" 
+                                            busy="false" 
+                                            busyIndicatorDelay="1000" 
+                                            visible="true" 
+                                            uiConfig="{ 'applicationSet': 'fiori' }" 
+                                            vizType="donut" 
+                                            legendVisible="true" 
+                                            vizProperties="{ 
+                                                'dataLabel': {
+                                                    visible: 'true'
+                                                },
+                                                'plotArea': {
+                                                    drawingEffect: 'glossy'
+                                                },
+                                                'title': { 
+                                                    'visible': 'true', 
+                                                    'text': '2024년 1월 1일부터 2024년 12월 31일까지' 
+                                                }}"
+                                            >
+                                            <viz:dataset>
+                                                <viz.data:FlattenedDataset data="{/book}">
+                                                    <viz.data:dimensions>
+                                                        <viz.data:DimensionDefinition name="Item Category" value="{Item Category}" />
+                                                    </viz.data:dimensions>
+                                                    <viz.data:measures>
+                                                        <viz.data:MeasureDefinition group="1" name="Revenue" value="{Revenue}" />
+                                                    </viz.data:measures>
+                                                </viz.data:FlattenedDataset>
+                                            </viz:dataset>
+                                            <viz:feeds>
+                                                <viz.feeds:FeedItem id="value1" uid="size" type="Measure" values="Revenue" />
+                                                <viz.feeds:FeedItem uid="color" type="Dimension" values="Item Category" />
+                                            </viz:feeds>
+                                        </viz:VizFrame>
+                                    </chart:content>
+                                </chart:ChartContainerContent>
                             </chart:content>
-                        </chart:ChartContainerContent>
-                    </chart:ChartContainer>
-                </VBox>
-            </content>
-        </Page>
+                        </chart:ChartContainer>
+                </layout:fixContent>
+            </layout:FixFlex>   
+        </content>
+    </Page>
 </mvc:View>
