계정목록 띄우기

--- a/fcl/webapp/view/Detail.view.xml
+++ b/fcl/webapp/view/Detail.view.xml
@@ -101,7 +101,7 @@
 						<blocks>
 							<m:Table
 								id="idConnectionTable"
-								items="{path : '/ConnectionSet'}">
+								items="{toConnection}">
 								<m:columns>
 									<m:Column> <m:Text text="{i18n>labelConnid}"/>
                                     </m:Column>
