--- a/project2/webapp/view/App.view.xml
+++ b/project2/webapp/view/App.view.xml
@@ -1,7 +1,20 @@
 <mvc:View controllerName="sync.zeb.project2.controller.App"
     xmlns:html="http://www.w3.org/1999/xhtml"
     xmlns:mvc="sap.ui.core.mvc" displayBlock="true"
-    xmlns="sap.m">
-    <App id="app">
-    </App>
+    xmlns="sap.m"
+    xmlns:f="sap.f"
+    height="100%">
+    
+    <f:FlexibleColumnLayout
+        id="idFlexibleColumnLayout"
+        stateChange=".onStateChanged"
+        backgroundDesign="Solid"
+        layout="{comp>/layout}">
+        <f:beginColumnPages>
+			<mvc:XMLView id="beginView" viewName="sync.zeb.project2.view.Master"/>
+		</f:beginColumnPages>
+        <f:midColumnPages>
+			<mvc:XMLView id="detailView" viewName="sync.zeb.project2.view.Detail"/>
+		</f:midColumnPages>
+    </f:FlexibleColumnLayout>
 </mvc:View>
