스마트필터 수정중

--- a/project2/webapp/view/App.view.xml
+++ b/project2/webapp/view/App.view.xml
@@ -16,5 +16,8 @@
         <f:midColumnPages>
 			<mvc:XMLView id="detailView" viewName="sync.zeb.project2.view.Detail"/>
 		</f:midColumnPages>
+        <!-- <f:endColumnPages>
+            <mvc:XMLView id="endView" viewName="sync.zeb.project2.view.DetailDetail"/>
+        </f:endColumnPages> -->
     </f:FlexibleColumnLayout>
 </mvc:View>
