--- a/project2/webapp/view/Master.view.xml
+++ b/project2/webapp/view/Master.view.xml
@@ -1,7 +1,9 @@
 <mvc:View controllerName="sync.zeb.project2.controller.Master"
     xmlns:mvc="sap.ui.core.mvc" displayBlock="true"
     xmlns="sap.m"
-    xmlns:f="sap.f">
+    xmlns:f="sap.f"
+    xmlns:smartFilterBar="sap.ui.comp.smartfilterbar"
+    xmlns:smartTable="sap.ui.comp.smarttable">
     <f:DynamicPage id="idDynamicPage" toggleHeaderOnTitleClick="false">
         <f:title>
 			<f:DynamicPageTitle>
@@ -12,10 +14,22 @@
 		</f:title>
         <f:content>
             <VBox fitContainer="true">
-                <OverflowToolbar class="sapFDynamicPageAlignContent">
+                <!-- <OverflowToolbar class="sapFDynamicPageAlignContent">
 					<ToolbarSpacer/>
 					<SearchField search=".onSearch" width="17.5rem"/>
-				</OverflowToolbar>
+                    <OverflowToolbarButton icon="sap-icon://sort" text="Sort" type="Transparent" press=".onSort"/>
+                </OverflowToolbar> -->
+                <smartFilterBar:SmartFilterBar
+                    id="smartFilterBar"
+                    entityType="SakSet"
+                    liveMode="true"
+                    useToolbar="true"
+                    header="true"
+                    smartVariant="true"
+                    persistencyKey="SmartFilterBar_sak"
+                    useDateRangeType="true"
+                    search=".onFilterSearch">
+                </smartFilterBar:SmartFilterBar>
                 <Table 
                     id="idSakTable"
                     items="{/SakSet}"
