--- a/deploy_test/webapp/view/Main.view.xml
+++ b/deploy_test/webapp/view/Main.view.xml
@@ -2,6 +2,9 @@
     xmlns:mvc="sap.ui.core.mvc" displayBlock="true"
     xmlns="sap.m">
     <Page id="page" title="{i18n>title}">
-        <content />
+        <content>
+            <Title text="ABCD" />
+            <Text text="EFGH" />
+        </content>
     </Page>
 </mvc:View>
